--- a/contest/Results.html
+++ b/contest/Results.html
@@ -4,6 +4,11 @@
 
 {{ block content }}
 
+You purchased {{ player.tickets_purchased }} tickets.
+The other player purchased {{ coplayer_purchased }} tickets.
+You won {{ player.prize_won }} of the prize.
+Your earnings are {{ player.earnings }}.
+
     {{ next_button }}
 {{ endblock }}
 
