Domonstrates making csf, endowment congifurable in session config

--- a/contest/Decision.html
+++ b/contest/Decision.html
@@ -3,7 +3,7 @@
 {{ endblock }}
 {{ block content }}
 
-Your endowment is {{ player.endowment }}
+Your endowment is {{ C.ENDOWMENT }}
 Each ticket costs {{ player.cost_per_ticket }}
 The prize is worth {{ group.prize}}
 
