--- a/contest/EndBlock.html
+++ b/contest/EndBlock.html
@@ -4,6 +4,19 @@
 
 {{ block content }}
 
+{{ for rd in player.in_all_rounds }}
+
+    {{ if rd.subsession.is_paid }}
+    Round {{ rd.round.number }}:
+    Tickets {{ rd.tickets_purchases }},
+    Prize share {{ rd.prize_won }},
+    Earnings {{ rd.earnings }},
+    Paid {{ rd.subsession.is_paid }}.
+    <br/>
+
+
+{{ endfor }}
+
     {{ next_button }}
 {{ endblock }}
 
