Encryption task: two letter words hard-coded

--- a/encryption/Decision.html
+++ b/encryption/Decision.html
@@ -3,6 +3,10 @@
 {{ endblock }}
 {{ block content }}
 
+The table is {{ subsession.lookup_dict }}
+
+The word is {{ subsession.word }}.
+
     {{ formfields }}
     {{ next_button }}
 
