--- a/contest/Results.html
+++ b/contest/Results.html
@@ -5,7 +5,7 @@
 {{ block content }}
 
 You purchased {{ player.tickets_purchased }} tickets.
-The other player purchased {{ coplayer_purchased }} tickets.
+The other player purchased {{ player.coplayer.tickets_purchased }} tickets.
 You won {{ player.prize_won }} of the prize.
 Your earnings are {{ player.earnings }}.
 
