--- a/encryption/Decision.html
+++ b/encryption/Decision.html
@@ -1,9 +1,45 @@
 {{ block title }}
     Word to encode
 {{ endblock }}
+
+{{ block styles }}
+<style>
+    .word {
+        color: dodgerblue;
+        font-size: 2.5rem;
+        font-family: "Comic Sans MS"
+    }
+</style>
+{{ endblock }}
+
 {{ block content }}
 
-The table is {{ subsession.lookup_dict }}
+
+
+<table class="table">
+    <thead>
+        <tr class="text-center fw-bold">
+            {{ for letter in subsession.lookup_dict.keys }}
+            <td>{{ letter }}</td>
+            {{ endfor }}
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="text-center">
+            {{for value in subsession.lookup_dict.values}}
+            <td>{{ value }}</td>
+            {{ endfor }}
+        </tr>
+    </tbody>
+</table>
+
+<div class="row">
+    <div class="col-12 text-center word">
+        {{ subsession.word }}
+    </div>
+
+</div>
+
 
 The word is {{ subsession.word }}.
 
