--- a/encryption/Decision.html
+++ b/encryption/Decision.html
@@ -4,17 +4,15 @@
 
 {{ block styles }}
 <style>
-    .word {
-        color: dodgerblue;
-        font-size: 2.5rem;
-        font-family: "Comic Sans MS"
-    }
+   .word {
+       color: dodgerblue;
+       font-size: 2.5rem;
+       font-family: "Comic Sans MS"
+   }
 </style>
 {{ endblock }}
 
 {{ block content }}
-
-
 
 <table class="table">
     <thead>
@@ -26,7 +24,7 @@
     </thead>
     <tbody>
         <tr class="text-center">
-            {{for value in subsession.lookup_dict.values}}
+            {{ for value in subsession.lookup_dict.values }}
             <td>{{ value }}</td>
             {{ endfor }}
         </tr>
@@ -40,10 +38,15 @@
 
 </div>
 
+<div class="row justify-content-center">
+{{ for field in player.response_fields }}
+    <div class="col-2">
+        <input type="number" class="form-control" inputmode="numeric"
+               id="id_{{field}}" min="0" name="{{field}}" required value="">
+    </div>
+{{ endfor }}
+</div>
 
-The word is {{ subsession.word }}.
-
-    {{ formfields }}
     {{ next_button }}
 
 {{ endblock }}
