--- a/encryption/Decision.html
+++ b/encryption/Decision.html
@@ -47,6 +47,10 @@
 {{ endfor }}
 </div>
 
-    {{ next_button }}
+<div class="row justify-content-center p-3">
+    <div class="col-4">
+        <button class="otree-btn-next btn btn-primary w-100">Confirm coding</button>
+    </div>
+</div>
 
 {{ endblock }}
